feat: implement Fishing skill vertical slice
Implement Fishing catch XP, Treasure Hunter tiers and treasure tables, Magic Hunter enchantments, Master Angler timing, vanilla fishing XP scaling, Shake drops and damage, Ice Fishing, Fisherman's Diet, and fishing anti-exploit behavior.

Port applicable default mcMMO 2.3.000 Fishing ranks, probabilities, wait-time formulas, loot configuration, permissions, commands, skill panels, configuration migration, protection checks, and automated tests.